--- a/musicapp/templates/comments/all_songs_comments.html
+++ b/musicapp/templates/comments/all_songs_comments.html
@@ -14,11 +14,9 @@
                     <span>{{ comment.text }} - {{ comment.user_profile.user.username }}</span>
                     <div>
                         <a href="{% url 'edit_comment' pk=comment.pk %}" class="btn btn-primary btn-sm">Edit</a>
-                        <form action="{% url 'comment_delete' comment.pk %}" method="post" class="d-inline">
-                            {% csrf_token %}
-                            <input type="hidden" name="next" value="{{ request.path }}">
-                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
-                        </form>
+                        <a href="{% url 'comment_delete' comment.pk %}"
+                            class="btn btn-danger confirm-delete btn-sm">Delete</a>
+
                     </div>
                 </li>
                 {% endif %}
@@ -31,4 +29,24 @@
 </div>
 
 
+{% endblock %}
+{% block postloadjs %}
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Wait for the DOM to be fully loaded before attaching the click event handler
+        var deleteLinks = document.querySelectorAll('.confirm-delete');
+
+        deleteLinks.forEach(function (link) {
+            link.addEventListener('click', function (e) {
+                e.preventDefault();
+                var shouldDelete = confirm('Are you sure you want to delete this?');
+
+                if (shouldDelete) {
+                    window.location.href = link.getAttribute('href');
+                }
+            });
+        });
+    });
+</script>
 {% endblock %}
