--- a/musicapp/templates/comments/all_songs_comments.html
+++ b/musicapp/templates/comments/all_songs_comments.html
@@ -9,17 +9,18 @@
             <h2 class="card-title">{{ song.artist_name }} - {{ song.song_title }}</h2>
             <ul class="list-group">
                 {% for comment in comments %}
-                {% if comment.music == song %}
-                <li class="list-group-item bg-dark text-light d-flex justify-content-between align-items-center">
-                    <span>{{ comment.text }} - {{ comment.user_profile.user.username }}</span>
-                    <div>
-                        <a href="{% url 'edit_comment' pk=comment.pk %}" class="btn btn-primary btn-sm">Edit</a>
-                        <a href="{% url 'comment_delete' comment.pk %}"
-                            class="btn btn-danger confirm-delete btn-sm">Delete</a>
-
-                    </div>
-                </li>
-                {% endif %}
+                    {% if comment.music == song %}
+                        <li class="list-group-item bg-dark text-light d-flex justify-content-between align-items-center">
+                            <span>{{ comment.text }} - {{ comment.user_profile.user.username }}</span>
+                            <div>
+                                {% if comment.user_profile.user == request.user or request.user.is_superuser %}
+                                    <!-- Your content for the user who wrote the comment or a superuser goes here -->
+                                    <a href="{% url 'edit_comment' pk=comment.pk %}" class="btn btn-primary btn-sm">Edit</a>
+                                    <a href="{% url 'comment_delete' comment.pk %}" class="btn btn-danger confirm-delete btn-sm">Delete</a>
+                                {% endif %}
+                            </div>
+                        </li>
+                    {% endif %}
                 {% endfor %}
             </ul>
             <a href="{% url 'add_comment_to_song' pk=song.pk %}" class="btn btn-primary mt-3">Add Comment</a>
@@ -27,11 +28,9 @@
     </div>
     {% endfor %}
 </div>
-
-
 {% endblock %}
-{% block postloadjs %}
 
+{% block postloadjs %}
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         // Wait for the DOM to be fully loaded before attaching the click event handler
