--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav mx-auto"> song_all_comments
+                    <ul class="navbar-nav mx-auto"> 
                         <li class="nav-item second-navbar-li">
                             <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
@@ -164,7 +164,7 @@
 
         <div class="d-none d-sm-block"> <!-- Hide on small screens -->
             {% if request.user.is_authenticated %}
-            <h4 class="align-items-center text-white p-1">Welcome, {{ user }}!</h4>
+            <h4 class="align-items-center text-white p-1">Welcome back, {{ user }}!</h4>
             {% else %}
             <h4 class="align-items-center text-white p-1">Welcome, Guest!</h4>
             {% endif %}
