--- a/static/styles/css/style.css
+++ b/static/styles/css/style.css
@@ -3,17 +3,34 @@
     height: 50px;
 }
 
-.like-button {
 
+.btn-del-edit{
+    min-width: 60px;
+}
+
+.all_song_card {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    background-color: #00415a;
+}
+.title-all-song {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    color: white;
+}
+
+.btn-del-edit,
+.like-icon {
+    margin-left: 1rem;
+}
+.dis-like-button {
+    border: grey;
+    color: white;
+    background-color: red;
+}
+
+.like-button {
     border: grey;
     color: white;
     background-color: green;
-    /* font-size: 24px;
-    cursor: pointer;
-    padding: 10px 20px; /* Adjust padding as needed */
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
 }
 
 .like-count {
@@ -32,18 +49,18 @@
 }
 
 .comments-bg-color {
-    background-color: #00415a
+    background-color: #00415a;
 }
 
 .comments-edit-card {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
     color: white;
     background-color: var(--bs-list-group-bg);
     width: auto;
 }
 .comments-card-title {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: small;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: x-large;
     color: white;
 }
 
@@ -53,13 +70,12 @@
     margin-bottom: 10px;
     font-weight: bold;
     color: #333;
-
 }
 
 /* General page setup */
 
 .all-body {
-    background-image: url('/static/images/studio_back.jpg');
+    background-image: url("/static/images/studio_back.jpg");
     background-position: center center;
     background-attachment: fixed;
     -webkit-background-size: cover;
@@ -73,7 +89,6 @@
 }
 
 /* Padding Pages */
-
 
 .nav-padding-merch-item {
     padding-top: 20px;
@@ -89,7 +104,6 @@
 .distance-top-na-v {
     min-height: calc(100vh - 140px);
 }
-
 
 /* Signup/Signout/Signin */
 .signup-container {
@@ -116,16 +130,13 @@
     max-height: 80%;
     width: auto;
     height: 250px;
-
 }
 
 .card-music-height {
     min-height: 50px;
-
 }
 
 /* merch_item (Increment and decrement) */
-
 
 .btn-black {
     background: black;
@@ -155,7 +166,6 @@
     color: white;
 }
 
-
 .btt-link,
 .update-link,
 .remove-item {
@@ -170,7 +180,6 @@
     border: 1px solid black !important;
 }
 
-
 /* Song/Music/List  */
 
 .song-li {
@@ -180,19 +189,18 @@
 .contact-us-title,
 .contact-us-label,
 .song-head {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #EAEAEA;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    color: #eaeaea;
 }
 
 .song-card {
     color: white;
     min-height: 400px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .song-main {
     background-color: deepskyblue;
-
 }
 /* Navbar Top */
 .nav-bar-text {
@@ -207,22 +215,19 @@
 /* Navbar Bottom */
 .second-navbar {
     background-color: #001f2b;
-
 }
 .second-navbar-li {
-
     padding-left: 25px;
     padding-right: 25px;
-    color: #EAEAEA;
+    color: #eaeaea;
 }
 
 .second-navbar-li a {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
     color: white;
     white-space: nowrap;
     font-size: large;
 }
-
 
 /* Footer phantom main page */
 
@@ -232,10 +237,8 @@
 }
 
 .min-height-login {
-
     padding-top: 200px;
 }
-
 
 /* Swatch Colors background colors */
 
@@ -252,12 +255,11 @@
 }
 
 .indigo-dye {
-    background-color: #00415a
+    background-color: #00415a;
 }
 
-
 .rich-black {
-    background-color: #001f2b
+    background-color: #001f2b;
 }
 
 /* Slider for Audio song page */
@@ -291,18 +293,16 @@ audio {
 
 /*  Fonts */
 @font-face {
-    font-family: 'ECG Font';
-    src: url('/static/lifeline-font/Lifeline-7O6A.ttf') format('truetype');
+    font-family: "ECG Font";
+    src: url("/static/lifeline-font/Lifeline-7O6A.ttf") format("truetype");
 }
 
 /* Pulse Font */
 .lifeline-font {
-    font-family: 'ECG Font', sans-serif;
+    font-family: "ECG Font", sans-serif;
     font-weight: 100;
     font-size: xx-large;
     color: white;
-
-
 }
 
 /* Allauth  */
@@ -313,16 +313,14 @@ audio {
 .login input[type="email"],
 .login input[type="password"] {
     color: white;
-
 }
 
 /* Cards */
 .item-discpt {
     color: white;
     font-size: small;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, "Times New Roman", Times, serif;
 }
-
 
 .card-title,
 .card-text {
@@ -339,13 +337,11 @@ audio {
     background-color: white;
 }
 
-
 /* Merchandise Discription Text Tags */
-
 
 .discription-page-text {
     color: white;
-    font-family: 'Open Sans', sans-serif;
+    font-family: "Open Sans", sans-serif;
 }
 
 /* Star Rating */
@@ -359,7 +355,6 @@ audio {
     width: 20px;
     height: 20px;
     margin: 0 2px;
-
 }
 
 .star.gold {
@@ -369,7 +364,7 @@ audio {
 .merch-item-height {
     height: auto;
     width: auto;
-    background-color: #00415a
+    background-color: #00415a;
 }
 
 /* To Be deleted */
@@ -396,7 +391,6 @@ audio {
     height: 5px;
 }
 
-
 /* Bag Page */
 
 .btn-outline-black {
@@ -405,14 +399,12 @@ audio {
     border: 1px solid black;
 }
 
-
 /* ------------------------------- bootstrap toasts */
 .text-bg-bag-message {
     background-color: #001f2b;
     color: white;
 }
 .message-container {
-
     position: fixed;
     top: 72px;
     right: 15px;
@@ -478,7 +470,6 @@ audio {
     overflow-y: auto;
 }
 
-
 /* Product Form */
 
 .btn-file {
@@ -501,16 +492,14 @@ audio {
     border-color: #dc3545;
 }
 
-.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
+.custom-checkbox .custom-control-input:checked ~ .custom-control-label::before {
     background-color: #dc3545;
     border-color: #dc3545;
     border-radius: 0;
 }
 
-
 /* Media Sizes */
 /* ------------------------------------- */
-
 
 /* Remove gap at to of small screen */
 @media(max-width: 767px) {
@@ -518,11 +507,8 @@ audio {
     .adjust-index-height {
         align-items: flex-start;
         min-height: auto;
-
-
     }
 }
-
 
 /* Allauth form formatting */
 
@@ -536,7 +522,7 @@ audio {
     border-radius: 0;
 }
 
-.allauth-form-inner-content label:not([for='id_remember']) {
+.allauth-form-inner-content label:not([for="id_remember"]) {
     display: none;
 }
 
@@ -545,7 +531,7 @@ audio {
 }
 
 .allauth-form-inner-content button,
-.allauth-form-inner-content input[type='submit'] {
+.allauth-form-inner-content input[type="submit"] {
     /* btn */
     display: inline-block;
     font-weight: 400;
@@ -568,7 +554,7 @@ audio {
 }
 
 .allauth-form-inner-content button:hover,
-.allauth-form-inner-content input[type='submit']:hover {
+.allauth-form-inner-content input[type="submit"]:hover {
     color: #fff;
     background-color: #222;
     border-color: #222;
